OKay finally got the search and filter situation worked out. The spacing is correct now.

--- a/styles/FilterAndSearch/styles.css
+++ b/styles/FilterAndSearch/styles.css
@@ -7,6 +7,6 @@
 
 .min-max-year {
     display: flex;
-    gap: 10px;
-    flex: 1;
+    flex-direction: row;
+    justify-content: space-between;
 }
