--- a/styles/Input/styles.css
+++ b/styles/Input/styles.css
@@ -1,3 +1,7 @@
 .input {
     width: 100%;
 }
+
+.input-two {
+    width: 50%;
+}
